# evil_log

./: CMakeLists.txt  README.md
benchmarks/: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  version.txt
benchmarks/.cache/clangd/index/: BenchmarkConfig.h.0812A904FA40E647.idx  Common.h.A27402CA08D9CD38.idx  Config.h.08E58DF3AF4D6227.idx  Cycles.h.3327DD5C9255E9C1.idx  Fence.h.E905F45870C11A0B.idx  Log.h.4DA09C2900A1700B.idx  NanoLog.h.9C4D2D9945558ACB.idx  NanoLogCpp17.h.FE6953E777987BF1.idx  Packer.h.69E9EFF5EBC0CC51.idx  Portability.h.7F10CC897AE5401E.idx  RuntimeLogger.h.D411E1D9E64E08FC.idx  TestUtil.h.652EB1634048F460.idx  Util.h.7EF1CBBC6D6A4B4C.idx  ansicolor_sink-inl.h.DA1233039AEF74E4.idx  ansicolor_sink.h.8FEAFAC549047FC8.idx  async.h.EA9ECF1183D32A30.idx  async_logger-inl.h.43CDD1FC3E70FF80.idx  async_logger.h.75417D378E224C20.idx  backtracer-inl.h.2E60F04A044F9416.idx  backtracer.h.2FA47BDE762D8A9B.idx  base_sink-inl.h.3A4588AAE2F95456.idx  base_sink.h.65BBBF37D0929DE0.idx  basic_file_sink-inl.h.907C1933EC850B24.idx  basic_file_sink.h.9FE6A3DC93C995AD.idx  circular_q.h.5805E9C2FD753A65.idx  common-inl.h.4C146B30D1F05439.idx  common.h.A9D2126F6709B0BF.idx  common.h.FE993BA9A2E99A62.idx  console_globals.h.002E0B44E1F0E625.idx  core.h.C2AF2D25785000F8.idx  file_helper-inl.h.3407B2D763F3B3AE.idx  file_helper.h.C237F43576D7A13D.idx  fmt.h.AA202C69D496F915.idx  fmt_helper.h.A963BDA67BD7D932.idx  format-inl.h.C7932E8F5EA37757.idx  format.h.1A8AB378E2874E25.idx  format.h.447B97495C70C044.idx  formatter.h.DFB1556A50CBCCBC.idx  (+29 more)
benchmarks/src/: main.cpp
(+12 files in other folders)
